--- a/contacto.html
+++ b/contacto.html
@@ -6,32 +6,89 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./img/favicon_io (1)/android-chrome-192x192.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <header>
-    <img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy">
-
-    <nav>
-      <ul>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="cursos.html">Cursos</a></li>
-        <li><a href="imprimir.html">Imprimir</a></li>
-        <li><a href="index.html">Home</a></li>
-      </ul>
+    <nav class=" navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-items collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./imprimir.html">Imprimir</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./cursos.html">Cursos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
-  <main>
-    <div class="main-contacto">
-      <h1>Contacto</h1>
-      <h2>Contanos tu idea y nosotros la volvemos realidad</h2>
-      <div class="formulario-contacto">
-        Acá se colocaría el formulario de contacto con su respectivo estilo
+  <main class="main-contacto">
+    <h1>Volvemos tu idea realidad</h1>
+    <div class="contenedor-contacto">      
+      <div class="area-formulario">
+        <div class="formulario-contacto">
+          <div class="mail-box mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Tu nombre</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1">
+          </div>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>Busco...</option>
+            <option value="1">Imprimir 3D</option>
+            <option value="2">Modelar una pieza 3D</option>
+            <option value="3">Modelado 3D + Impresion 3D</option>
+            <option value="4">Asesoramiento técnico</option>
+          </select>
+        </div>
+        <div class="mail-box mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Tu dirección de email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">¿Comentarios?</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="formFileMultiple" class="form-label">Envianos tu archivo</label>
+          <input class="form-control" type="file" id="formFileMultiple" multiple>
+        </div>
+        <div class="d-grid gap-2">
+          <button class="btn btn-primary" type="button">Enviar</button>
+        </div>
       </div>
+      <div class="contenedor-imagen-contacto">
+        <img class="imagen-contacto" src="./img/Contacto.jpg" alt="Contactanos">
+      </div>
+
+
     </div>
+
   </main>
 
   <footer>
@@ -39,6 +96,8 @@
         src="./img/Logo-instagram.png" alt="Instagram"></a>
     <a href="contacto.html"><img class="logos-footer" src="./img/Logo-contacto.png" alt="Contacto"></a>
   </footer>
+
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
