--- a/nosotros.html
+++ b/nosotros.html
@@ -6,26 +6,50 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicios</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./img/favicon_io (1)/android-chrome-192x192.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <header>
-    <img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy">
-    <nav>
-      <ul>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="cursos.html">Cursos</a></li>
-        <li><a href="imprimir.html">Imprimir</a></li>
-        <li><a href="index.html">Home</a></li>
-      </ul>
+    <nav class=" navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-items collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./imprimir.html">Imprimir</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./cursos.html">Cursos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="./nosotros.html">Nosotros</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
   <main class="main-nosotros">
-    <h1>Nosotros</h1>
-    <h2>Encontramos soluciones a tus necesidades</h2>
+    <h1>Encontramos soluciones a tus necesidades</h1>
     <div class="nosotros-info">
       <div class="img-nosotros1">
         <img src="./img/Nosotros01.jpg" alt="">
@@ -44,8 +68,26 @@
     </div>
     <div class="galeria-nosotros">
       <h3>Inspirate <br> ⬇</h3>
-      <div class="carrousel-galeria">
-        Acá va la galería de imágenes
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/Inspiracion01.jpg" class=" w-100" alt="Imagen 01">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/Inspiracion02.jpg" class=" w-100" alt="Imagen 02">
+          </div>
+          <div class="carousel-item">
+            <img src="./img/Inspiracion03.jpg" class=" w-100" alt="Imagen 03">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </main>
@@ -55,6 +97,8 @@
         src="./img/Logo-instagram.png" alt="Instagram"></a>
     <a href="contacto.html"><img class="logos-footer" src="./img/Logo-contacto.png" alt="Contacto"></a>
   </footer>
+
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
