Agregué animaciones de CSS. Trabajé en las secciones Main e index incorporando nuevos elementos

--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,7 @@
 
   <main class="main-contacto">
     <h1>Volvemos tu idea realidad</h1>
-    <div class="contenedor-contacto">      
+    <div class="contenedor-contacto">
       <div class="area-formulario">
         <div class="formulario-contacto">
           <div class="mail-box mb-3">
@@ -61,7 +61,9 @@
           <select class="form-select" aria-label="Default select example">
             <option selected>Busco...</option>
             <option value="1">Imprimir 3D</option>
-            <option value="2">Modelar una pieza 3D</option>
+            <option value="2">Modelado Básico</option>
+            <option value="2">Modelado Orgánico</option>
+            <option value="2">Escaneo 3D</option>
             <option value="3">Modelado 3D + Impresion 3D</option>
             <option value="4">Asesoramiento técnico</option>
           </select>
@@ -85,8 +87,6 @@
       <div class="contenedor-imagen-contacto">
         <img class="imagen-contacto" src="./img/Contacto.jpg" alt="Contactanos">
       </div>
-
-
     </div>
 
   </main>
