--- a/cursos.html
+++ b/cursos.html
@@ -22,7 +22,8 @@
     <nav class=" navbar navbar-expand-lg ">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html"><img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-items collapse navbar-collapse" id="navbarNav">
@@ -54,7 +55,7 @@
       <div class="info-clases3d">
         <div>
           <h3>
-            Impresión 3D <br> para jóvenes (+12)
+            Impresión 3D <br> para jóvenes (+8)
           </h3>
         </div>
         <div>
@@ -62,7 +63,8 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a class="btn-generico" href="contacto.html"> Más Info</a>
+          <a href="./img/Plan de Estudios 2022 - Voxel Uy.pdf" download="How-to-download-file.pdf" class="btn-generico"
+            href="contacto.html">Descargar plan</a>
         </div>
       </div>
     </div>
@@ -78,7 +80,25 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a class="btn-generico" href="contacto.html"> Más Info</a>
+          <a href="./img/Plan de Estudios 2022 - Voxel Uy.pdf" download="How-to-download-file.pdf" class="btn-generico"
+            href="contacto.html">Descargar plan</a>
+        </div>
+      </div>
+    </div>
+    <div class="clases03">
+      <div class="info-clases3d">
+        <div>
+          <h3>
+            Talleres <br> Interactivos
+          </h3>
+        </div>
+        <div>
+          <p>Charlas informativas y actividades recreativas para niños de hasta 12 años
+          </p>
+        </div>
+        <div class="btn-cursos">
+          <a href="./img/Plan de Estudios 2022 - Voxel Uy.pdf" download="How-to-download-file.pdf" class="btn-generico"
+            href="contacto.html">Descargar plan</a>
         </div>
       </div>
     </div>
