--- a/imprimir.html
+++ b/imprimir.html
@@ -22,7 +22,8 @@
     <nav class=" navbar navbar-expand-lg ">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html"><img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-items collapse navbar-collapse" id="navbarNav">
@@ -63,9 +64,41 @@
           <a class="btn-generico" href="contacto.html"> Más Info</a>
         </div>
       </div>
+    </div>
+    </div>
+    </div>
 
+    <div class="materiales">
+      <h3>Variantes</h3>
+      <p>Ofrecemos diferentes modalidades según tu necesidad</p>
     </div>
+    <div class="contenedor-card-plasticos">
+      <div class="card" style="width: 18rem;">
+        <img src="./img/Modelado-basico.jpg" class="card-img-top" alt="Modelado Básico">
+        <div class="card-body">
+          <h5 class="card-title">Básico</h5>
+          <h6 class="card-title">$250/hora</h6>
+          <p class="card-text">Modelado tradicional de formas básicas</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./img/Modelado-orgánico.jpg" class="card-img-top" alt="Modelado Orgánico">
+        <div class="card-body">
+          <h5 class="card-title">Orgánico</h5>
+          <h6 class="card-title">$350/hora</h6>
+          <p class="card-text">Ideal para piezas con superficies complejas</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./img/Escaneo-3d.jpg" class="card-img-top" alt="Escaneo 3D">
+        <div class="card-body">
+          <h5 class="card-title">Escaneo 3D</h5>
+          <h6 class="card-title">$/consultar</h6>
+          <p class="card-text">Relevamiento en 3D de objetos y piezas físicas</p>
+        </div>
+      </div>
     </div>
+
     <div class="impresion3d">
       <div class="info-impresion3d">
         <div>
@@ -81,6 +114,37 @@
           <a class="btn-generico" href="contacto.html"> Más Info</a>
         </div>
       </div>
+    </div>
+    <div class="materiales">
+      <h3>Tipos de material</h3>
+      <p>Contamos con diferentes tipos de plástico para tus impresiones</p>
+    </div>
+    <div class="contenedor-card-plasticos">
+      <div class="card" style="width: 18rem;">
+        <img src="./img/Plastico-PET.png" class="card-img-top" alt="Plástico PET">
+        <div class="card-body">
+          <h5 class="card-title">Plástico PETG</h5>
+          <h6 class="card-title">$20/gramo</h6>
+          <p class="card-text">Material resistente. Ideal para piezas mecánicas</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./img/Plastico-PLA.png" class="card-img-top" alt="Plástico PLA">
+        <div class="card-body">
+          <h5 class="card-title">Plástico PLA</h5>
+          <h6 class="card-title">$15/gramo</h6>
+          <p class="card-text">Facilidad de impresión. Material biodegradable y fácil de manipular</p>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./img/Plastico-ABS.png" class="card-img-top" alt="Plástico ABS">
+        <div class="card-body">
+          <h5 class="card-title">Plástico ABS</h5>
+          <h6 class="card-title">$25/gramo</h6>
+          <p class="card-text">Gran resistencia a impactos. Ideal para prototipos funcionales</p>
+        </div>
+      </div>
+    </div>
     </div>
     </div>
   </main>
