--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,8 @@
     <nav class=" navbar navbar-expand-lg ">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html"><img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-items collapse navbar-collapse" id="navbarNav">
@@ -55,7 +56,9 @@
         <img src="./img/Nosotros01.jpg" alt="">
       </div>
       <div class="texto01">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum porro doloribus adipisci assumenda facere nulla vero. Autem temporibus veritatis, distinctio assumenda omnis ipsa doloremque nesciunt, eligendi adipisci recusandae incidunt laborum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum porro doloribus adipisci assumenda facere
+          nulla vero. Autem temporibus veritatis, distinctio assumenda omnis ipsa doloremque nesciunt, eligendi adipisci
+          recusandae incidunt laborum!</p>
       </div>
       <div class="img-nosotros2">
         <img src="./img/Nosotros02.jpg" alt="">
@@ -67,7 +70,8 @@
       </div>
     </div>
     <div class="galeria-nosotros">
-      <h3>Inspirate <br> ⬇</h3>
+      <h3>Galería</h3>
+      <p>Imágenes para despertar tu inspiración</p>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -80,11 +84,13 @@
             <img src="./img/Inspiracion03.jpg" class=" w-100" alt="Imagen 03">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
