Mejoré los botones de la sección cursos

--- a/cursos.html
+++ b/cursos.html
@@ -64,7 +64,7 @@
         </div>
         <div class="btn-cursos">
 
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> </a>
+          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> Descargar Plan </a>
 
         </div>
       </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="btn-cursos">
 
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"></a>
+          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> Descargar Plan </a>
 
         </div>
       </div>
@@ -99,7 +99,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"></a>
+          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> Descargar Plan </a>
         </div>
       </div>
     </div>
