Apliqué SASS a todo el proyecto y agregué etiquetas meta para mejorar SEO

--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto</title>
+  <meta name="keywords" content="impresion 3d, contacto, comunicate con nosotros ">
+  <meta name="description" content="¿Querés llevar tu idea del papel a la realidad? Contanos tu idea y dejanos tus datos personales que nosotros nos encargamos del resto. ¡Animate! ">
+  <title>Voxel Uy | Contacto</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -80,15 +82,14 @@
           <label for="formFileMultiple" class="form-label">Envianos tu archivo</label>
           <input class="form-control" type="file" id="formFileMultiple" multiple>
         </div>
-        <div class="d-grid gap-2">
-          <button class="btn btn-primary" type="button">Enviar</button>
+        <div class="btn-contacto">
+          <a href="#"> Enviar </a>
         </div>
       </div>
       <div class="contenedor-imagen-contacto">
         <img class="imagen-contacto" src="./img/Contacto.jpg" alt="Contactanos">
       </div>
     </div>
-
   </main>
 
   <footer>
