--- a/cursos.html
+++ b/cursos.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cursos</title>
+  <meta name="keywords" content="curso impresion 3d, cursos 3d, clases de impresion 3d, curso modelado 3d">
+  <meta name="description" content="Contamos con cursos personalizados orientados a todo tipo de público, desde niños hasta adultos sin experiencia en el rubro. No te quedes sin tu lugar. ¡Conocé más! ">
+  <title>Voxel Uy | Cursos</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +51,7 @@
     </nav>
   </header>
 
-  <main class="main-imprimir">
+  <main class="main-cursos">
     <h1>Aprendé con Nosotros</h1>
     <div class="clases">
       <div class="info-clases3d">
@@ -63,9 +65,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> Descargar Plan </a>
-
+          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
         </div>
       </div>
     </div>
@@ -81,9 +81,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> Descargar Plan </a>
-
+          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
         </div>
       </div>
     </div>
@@ -99,7 +97,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf" class="btn-generico"> Descargar Plan </a>
+          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
         </div>
       </div>
     </div>
