--- a/imprimir.html
+++ b/imprimir.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imprimir</title>
+  <meta name="keywords" content="imprimir en 3d, imprimir3d, modelado 3d, 3d print, servicio 3d">
+  <meta name="description" content="Servicio de modelado e impresión 3d. Hacemos tu idea realidad. Contamos con diferentes tecnologías para tus necesidades. ¡Contáctanos! ">
+  <title>Voxel Uy | Imprimir</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +63,7 @@
           </p>
         </div>
         <div class="btn-modelado3d">
-          <a class="btn-generico" href="contacto.html"> Más Info</a>
+          <a href="contacto.html"> Más Info</a>
         </div>
       </div>
     </div>
@@ -111,7 +113,7 @@
           </p>
         </div>
         <div class="btn-modelado3d">
-          <a class="btn-generico" href="contacto.html"> Más Info</a>
+          <a href="contacto.html"> Más Info</a>
         </div>
       </div>
     </div>
