--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios</title>
+  <meta name="keywords" content="impresion 3d, modelado 3d, impresora 3d">
+  <meta name="description" content="Somos una empresa jóven dedicada a la fabricación Digital. Nos especializamos en el Rapid Prototyping, generando objetos desde cero y en tiempo récord. ¿Querés saber más? ¡Envianos tu proyecto!">
+  <title>Voxel Uy | Servicios</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,23 +52,25 @@
   </header>
 
   <main class="main-nosotros">
-    <h1>Encontramos soluciones a tus necesidades</h1>
+    <h1>Quiénes somos</h1>
     <div class="nosotros-info">
       <div class="img-nosotros1">
         <img src="./img/Nosotros01.jpg" alt="">
       </div>
       <div class="texto01">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum porro doloribus adipisci assumenda facere
-          nulla vero. Autem temporibus veritatis, distinctio assumenda omnis ipsa doloremque nesciunt, eligendi adipisci
-          recusandae incidunt laborum!</p>
+        <p>Somos una empresa jóven, dedicados al servicio de tecnologías de fabricación Digital. Encontramos soluciones
+          a tus necesidades.
+          Contamos con servicios de alta calidad para asegurarte los mejores resultados.
+        </p>
       </div>
       <div class="img-nosotros2">
         <img src="./img/Nosotros02.jpg" alt="">
       </div>
       <div class="texto02">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore excepturi harum vero cum
-          natus aperiam animi
-          nesciunt sit ea porro beatae illo itaque quaerat maxime, quidem autem neque tenetur nemo?</p>
+        <p>Estamos constantemente en la búqueda de soluciones innovadoras, teniendo en consideración los últimos avances
+          del mundo de la Impresión 3D. Nos especializamos en el Rapid Prototyping, una rama dentro de la fabricación
+          digital que permite crear objetos físicos de forma rápida y económica para las empresas que desarrollan
+          productos. </p>
       </div>
     </div>
     <div class="galeria-nosotros">
