--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voxel Uy</title>
+  <meta name="keywords" content="impresion 3d, modelado 3d, impresora 3d, cursos 3d">
+  <meta name="description" content="Voxel uy es una plataforma donde vas a poder realizar tus ideas en 3d. Envianos tu proyecto o propuesta y nos pondremos en contacto a la brevedad. ¡Te esperamos!">
+  <title>Voxel Uy | Home</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +21,7 @@
 
 <body>
   <header>
-    <nav class=" navbar navbar-expand-lg navbar-fixed-top ">
+    <nav class=" navbar navbar-expand-md navbar-fixed-top ">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html"><img class="logo" src="./img/Logo Voxel.png" alt="Voxel Uy"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
