Se optimizaron las imágenes y se actualizó el archivo README.txt

--- a/imprimir.html
+++ b/imprimir.html
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./img/Modelado-orgánico.jpg" class="card-img-top" alt="Modelado Orgánico">
+        <img src="./img/Modelado-organico.jpg" class="card-img-top" alt="Modelado Orgánico">
         <div class="card-body">
           <h5 class="card-title">Orgánico</h5>
           <h6 class="card-title">$350/hora</h6>
@@ -123,7 +123,7 @@
     </div>
     <div class="contenedor-card-plasticos">
       <div class="card" style="width: 18rem;">
-        <img src="./img/Plastico-PET.png" class="card-img-top" alt="Plástico PET">
+        <img src="./img/Plastico-PET.jpg" class="card-img-top" alt="Plástico PET">
         <div class="card-body">
           <h5 class="card-title">Plástico PETG</h5>
           <h6 class="card-title">$20/gramo</h6>
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./img/Plastico-PLA.png" class="card-img-top" alt="Plástico PLA">
+        <img src="./img/Plastico-PLA.jpg" class="card-img-top" alt="Plástico PLA">
         <div class="card-body">
           <h5 class="card-title">Plástico PLA</h5>
           <h6 class="card-title">$15/gramo</h6>
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./img/Plastico-ABS.png" class="card-img-top" alt="Plástico ABS">
+        <img src="./img/Plastico-ABS.jpg" class="card-img-top" alt="Plástico ABS">
         <div class="card-body">
           <h5 class="card-title">Plástico ABS</h5>
           <h6 class="card-title">$25/gramo</h6>
