Se adjuntó correctamente el archivo PDF descargable en la sección Cursos

--- a/cursos.html
+++ b/cursos.html
@@ -65,7 +65,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
+          <a href="./img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
+          <a href="./img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
         </div>
       </div>
     </div>
@@ -97,7 +97,7 @@
           </p>
         </div>
         <div class="btn-cursos">
-          <a href="../img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
+          <a href="./img/Plan de Estudios 2022 - Voxel Uy.pdf" download="Plan de Estudios 2022 - Voxel Uy.pdf"> Descargar Plan </a>
         </div>
       </div>
     </div>
