Realicé cambios en el footer y agregué mapa en la sección contacto

--- a/nosotros.html
+++ b/nosotros.html
@@ -103,9 +103,15 @@
   </main>
 
   <footer>
-    <a target="_blank" href="https://www.instagram.com/voxel.uy/?hl=es"><img class="logos-footer"
-        src="./img/Logo-instagram.png" alt="Instagram"></a>
-    <a href="contacto.html"><img class="logos-footer" src="./img/Logo-contacto.png" alt="Contacto"></a>
+    <div class="logos-footer-contenedor">
+      <a href="contacto.html"><img class="logos-footer" src="./img/Logo-ubicacion.png" alt="Contacto"></a>
+      <a target="_blank" href="https://www.instagram.com/voxel.uy/?hl=es"><img class="logos-footer" src="./img/Logo-instagram.png" alt="Instagram"></a>
+      <a href="contacto.html"><img class="logos-footer" src="./img/Logo-contacto.png" alt="Contacto"></a>
+    </div>
+    <div class="copy">
+      <h6>Voxel Uy</h6>
+      <h6>Copyright © 2022</h6>
+    </div>
   </footer>
 
   <script src="./js/bootstrap.bundle.min.js"></script>
