--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="impresion 3d, contacto, comunicate con nosotros ">
-  <meta name="description" content="¿Querés llevar tu idea del papel a la realidad? Contanos tu idea y dejanos tus datos personales que nosotros nos encargamos del resto. ¡Animate! ">
+  <meta name="description"
+    content="¿Querés llevar tu idea del papel a la realidad? Contanos tu idea y dejanos tus datos personales que nosotros nos encargamos del resto. ¡Animate! ">
   <title>Voxel Uy | Contacto</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,15 +88,24 @@
         </div>
       </div>
       <div class="contenedor-imagen-contacto">
-        <img class="imagen-contacto" src="./img/Contacto.jpg" alt="Contactanos">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.3736247013812!2d-56.147873184939215!3d-34.897072180384455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f811b6e36a115%3A0xbe0d18558c791838!2s4%20de%20Julio%203276%2C%2011600%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1663080018243!5m2!1ses-419!2suy"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </main>
 
   <footer>
-    <a target="_blank" href="https://www.instagram.com/voxel.uy/?hl=es"><img class="logos-footer"
-        src="./img/Logo-instagram.png" alt="Instagram"></a>
-    <a href="contacto.html"><img class="logos-footer" src="./img/Logo-contacto.png" alt="Contacto"></a>
+    <div class="logos-footer-contenedor">
+      <a href="contacto.html"><img class="logos-footer" src="./img/Logo-ubicacion.png" alt="Contacto"></a>
+      <a target="_blank" href="https://www.instagram.com/voxel.uy/?hl=es"><img class="logos-footer" src="./img/Logo-instagram.png" alt="Instagram"></a>
+      <a href="contacto.html"><img class="logos-footer" src="./img/Logo-contacto.png" alt="Contacto"></a>
+    </div>
+    <div class="copy">
+      <h6>Voxel Uy</h6>
+      <h6>Copyright © 2022</h6>
+    </div>
   </footer>
 
   <script src="./js/bootstrap.bundle.min.js"></script>
